<resources>
    <string name="app_name">Bottom Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_matters">Matters</string>
    <string name="title_more">More</string>
    <string name="title_global_create">Create</string>
    <string name="title_global_create_event">Event</string>
    <string name="title_global_create_task">Task</string>
    <string name="title_global_create_expense">Expense</string>
    <string name="title_global_create_time_entry">Time Entry</string>
    <string name="title_global_create_note">Note</string>
    <string name="title_global_create_contact">Contact</string>
    <string name="title_global_create_communication">Communication</string>
    <string name="title_global_create_matter">Matter</string>
    <string name="title_global_create_relationship">Relationship</string>
    <string name="title_activity_detail">Detail Activity</string>
</resources>